# auto_procedure_classification

./: .gitignore  LICENSE  README.md  procedure_classification.py  procedure_classifications_initial.csv  procedure_name.txt  procedure_test.txt  pyproject.toml  run_job.sh  run_task.py  test.py  visualizer.ipynb
src/: procedure_classification.py  test.py
task_radiation_site/: README.md  radiation_site.json
task_surgery_classification/: README.md  surgery_classification.json
task_test/: test.json
