[project]
name = "procedure_classifier"
version = "0.1.0"
description = "automated surgical procedure classification"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Feiyang Huang"}
]

dependencies = [
    "pandas",
    "torch==2.6.0",
    "transformers[torch]",
    "huggingface_hub",
    "datasets",
    "bitsandbytes",
    "accelerate",
    "tqdm",
    "matplotlib",
]

[tool.pip]
extra-index-urls = ["https://pypi.nvidia.com"]

[tool.setuptools.packages.find]
exclude = ["log*", "hf_cache*"]