[project]
name = "procedure_classifier"
version = "0.1.0"
description = "automated surgical procedure classification"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Feiyang Huang"}
]

dependencies = [
    "pandas",
    "numpy",
    "torch==2.6.0",
    "transformers[torch]",
    "huggingface_hub",
    "datasets",
    "bitsandbytes",
    "accelerate",
    "tqdm",
    "matplotlib",
    "seaborn",
    "plotly",
    "jupyterlab"
]

[tool.pip]
extra-index-urls = ["https://pypi.nvidia.com"]

[tool.setuptools.packages.find]
exclude = ["hf_cache*"]